# AgriInvestor-2

./: .replit  app.py  forms.py  main.py  models.py  pyproject.toml  recommendation_engine.py  response.html  routes.py  utils.py
attached_assets/: Pasted--2025-05-15-20-59-29-0000-2481-CRITICAL-WORKER-TIMEOUT-pid-2492-2025-05-15-20-59-29-0000--1747342830626.txt  Pasted-ERROR-routes-Error-loading-admin-dashboard-Encountered-unknown-tag-else-Jinja-was-looking-for-th-1747347593768.txt  Pasted-INFO-main-Database-tables-created-2025-05-15-21-42-02-0000-6547-ERROR-invalid-syntax-routes--1747345339606.txt  Pasted-RROR-app-Exception-on-GET-Traceback-most-recent-call-last-File-home-runner-workspace-pyt-1747342016563.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-pa-1747348499709.txt  Pasted-exception-was-thrown-while-monkey-patching-for-eventlet-to-fix-this-error-make-sure-you-run-eventle-1747343038000.txt
instance/: farmlink.db
static/css/: animations.css  dashboard-modern.css  style.css
static/js/: admin-activities.js  dashboard.js  main.js
templates/: about.html  admin_register.html  base.html  contact.html  create_admin.html  dashboard.html  error.html  farmer_profile.html  index.html  investor_profile.html  login.html  opportunities.html  project_detail.html  projects.html  register.html
