[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "routes>=2.5.1",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "flask-login>=0.6.3",
    "flask-dance>=7.1.0",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "flask-socketio>=5.5.1",
    "numpy>=2.2.5",
    "eventlet>=0.40.0",
    "sqlalchemy>=2.0.40",
]
